  * moved bootstrapping code to Bootstrap.cs
  * change to base directory
  * GameServerListConfig.GameServers returns IList
  * removed zlib workaround which should be in scripts
  * MultiConOut is a dummy now that log4net is being used
  * disable console in service mode
  * added Config.Features
    - disable-context-menus
    - prefer-ascii
    - delocalize
  * Config.MultiThreading renamed to Config.Features["multi-threading"]
  * moved config classes to namespace Server.Config
  * Config.GameServerList implements IEnumerable
  * all unsafe code replaced with managed implementations
  * debian: symlink base/Data to /etc/sunuo
  * debian: symlink base/var/log to /var/log/sunuo
  * debian: install SunUO.exe.config in /etc/sunuo/
  * debian: install third party libraries in /usr/share/sunuo/
  * debian: start SunUO in service mode
  * debian: support multiple shards
  * debian: recommend runuo-skeleton and sunuo-legacy-scripts
  * debian: removed runuo-installer

 --

sunuo (0.2.3) unstable; urgency=low

  * explicitly ignore HardwareInfo packets

 -- Max Kellermann <max@duempel.org>  Mon, 19 Dec 2005 16:25:41 +0100

sunuo (0.2.2) unstable; urgency=low

  * don't use nested Makefiles
  * distribute Mysql.Data.dll and Npgsql.dll
  * SunLogin responds to UOG queries

 -- Max Kellermann <max@duempel.org>  Mon, 19 Dec 2005 15:59:06 +0100

sunuo (0.2.1) unstable; urgency=low

  * ignore misconfiguration in Scripts/Misc/DataPath.cs, just like RunUO
    does
  * implemented a stripped down SunUO server as login server, with account
    database in ODBC
  * ExtendedCommand does its own in-game check, removed requirement
  * added ExtendedCommand 0x5555 which will serve as container for our
    protocol extensions
  * configuration option for "super clients"
  * login server can send auth ID to game servers

 -- Max Kellermann <max@duempel.org>  Fri, 16 Dec 2005 15:51:13 +0100

sunuo (0.2.0) unstable; urgency=low
